trunk/Archive2/91/84f7297405d5e4/output
main.cpp:6:1: error: expected unqualified-id before 'using'
 using stringpair = std::pair<std::string, T>;
 ^
